contact form with email function --> checked

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
 REACT_APP_API_URL= http://127.0.0.1:8000/uploadfile
+SERVICE_ID=service_5shn44c
+TEMPLATE_ID=template_59275d5
+EMAILJS_PUBLIC_KEY='uwcZy1Y533MyE9n5_'
